# game

./: CMakeLists.txt  main.cpp
engine/: window.h
libraries/glad/include/glad/: glad.h
libraries/glad/src/: glad.c
libraries/glfw/src/: window.c
